--- a/static/css/base.css
+++ b/static/css/base.css
@@ -51,29 +51,29 @@ body {
 
 /* This overlay class styling will hide the background image on all  
    products page & all other pages we don't want it to appear. */
-    .overlay {
-        height: 100%;
-        width: 100%;
-        top: 0;
-        left: 0;
-        position: fixed;
-        background: #fff;
-        z-index: -1;
-    }
+.overlay {
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    background: #fff;
+    z-index: -1;
+}
 
-    ul li a span.cart-item-count {
-        font-size: .6rem;
-        position: absolute;
-        top: -6px;
-        right: -5px;
-        width: 15px;
-        height: 15px;
-        color: #000;
-        background-color: #418deb;
-        border-radius: 50%;
-    }
+ul li a span.cart-item-count {
+    font-size: .6rem;
+    position: absolute;
+    top: -6px;
+    right: -5px;
+    width: 15px;
+    height: 15px;
+    color: #000;
+    background-color: #418deb;
+    border-radius: 50%;
+}
 
-.bg-dark, .bg-color {
+.bg-dark, .bg-color, .btn-dark {
     background-color: #e75480 !important;
 }
 
@@ -166,6 +166,51 @@ a.category-badge > span.badge:hover {
 .toast-capper {
     height: 2px;
 }
+
+/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
+.arrow-up {
+    width: 0; 
+    height: 0; 
+    border-left: 4px solid transparent;
+    border-right: 4px solid transparent; 
+    border-bottom: 10px solid black;
+    position: absolute;
+    top: -10px;
+    right: 36px;
+}
+
+/* Convenience classes - colors copied from Bootstrap */
+.arrow-primary {
+    border-bottom-color: #007bff !important
+}
+.arrow-secondary {
+    border-bottom-color: #6c757d !important
+}
+.arrow-success {
+    border-bottom-color: #28a745 !important
+}
+.arrow-danger {
+    border-bottom-color: #dc3545 !important
+}
+.arrow-warning {
+    border-bottom-color: #ffc107 !important
+}
+.arrow-info {
+    border-bottom-color: #17a2b8 !important
+}
+.arrow-light {
+    border-bottom-color: #f8f9fa !important
+}
+.arrow-dark {
+    border-bottom-color: #343a40 !important
+}
+
+.cart-notification-wrapper {
+    height: 100px;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
 
 /* AUTHENTICATION PAGES BUTTONS STYLING */
 
