--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -150,8 +150,8 @@
                             </span>
                             <span class="font-weight-bold">Update Cart</span> <!-- BA used Adjust Bag -->
                         </a>
-                        <button id="submit-button" class="btn btn-md rounded-0 py-3 mt-1 px-5 shop-now-button bttn-success font-weight-bold">
-                        <!-- <button id="submit-button" class="btn btn-black rounded-0"> -->
+                        <button id="submit-button" class="btn btn-md btn-success rounded-0 py-3 checkout font-weight-bold">
+                        <!-- <button id="submit-button" class="btn btn-md rounded-0 py-3 mt-1 px-5 shop-now-button bttn-success font-weight-bold"> -->
                             <span class="font-weight-bold">Complete Order</span>
                             <span class="icon">
                                 <i class="fas fa-lock"></i>
