--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -184,7 +184,7 @@
     </div>
 {% endblock %}
 
-<!-- JS FOR BACK TO TOP BUTTON -->
+<!-- JS FOR BACK TO TOP BUTTON & STRIPE KEYS -->
 {% block postloadjs %}
     {{ block.super }}
     {{ stripe_public_key|json_script:"id_stripe_public_key" }}
