--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -2,40 +2,41 @@
 {% load static %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'profiles/css/profile.css' %}">
+<!-- <link rel="stylesheet" href="{% static 'profiles/css/profile.css' %}"> -->
 {% endblock %}
 
 {% block page_header %}
-    <!-- <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
-    </div> -->
+<div class="container">
+    <div class="row">
+        <div class="col"></div>
+    </div>
+</div>
 {% endblock %}
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container">  <!-- container div starts -->   <!-- mb-2 -->
+    <div class="container">  <!-- container div starts -->   
         <div class="row">  <!-- row div starts -->
             <div class="col">
                 <hr>
                 <h2 class="logo-font mb-4"><em>My Profile</em></h2>
-                <!-- <div class="row float-right">
-                    <div class="col-lg-12">
-                        <div class="box-element">
-                            <a class="btn btn-md rounded-0 py-3 mb-2 btn-dark shop-now-button font-weight-bold" href="{% url 'products' %}">
-                            <a class="shop-now-button btn btn-lg rounded-0 py-3 shopping-btn" href="{% url 'products' %}"> 
-                                <span class="icon">
-                                    <i class="fas fa-chevron-left"></i>
-                                </span>Continue Shopping    
-                            </a>
-                        </div> box element class ends 
-                    </div> col div ends 
-                </div>  row div ends -->
                 <hr>
             </div>
         </div>  <!-- row div ends -->
-        {{ profile }}
+        <div class="row">
+            <div class="col-12 col-lg-6">
+                <p class="text-black">Default Delivery Information</p>
+                <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    <button class="btn btn-dark rounded-0 float-right">Update Information</button>
+                </form>
+            </div>
+            <div class="col-12 col-lg-6">
+                <p class="text-black">Order History</p>
+                {{ orders }}
+            </div>
+        </div>
     </div>  <!-- container div ends -->
 
 
@@ -55,6 +56,8 @@
             window.scrollTo(0,0)
         })
     </script>
+
+    <!-- <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script> -->
 {% endblock %}
 
 
