--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -2,11 +2,7 @@
 {% load static %}
 
 {% block page_header %}
-    <!-- <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
-    </div> -->
+    
 {% endblock %}
 
 {% block content %}
@@ -26,9 +22,6 @@
                 <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ c.friendly_name }}</span>
             </a>
         {% endfor %}
-                <!-- <hr class="w-50 mb-1">
-            </div>
-        </div> -->
         <div class="row">
             <div class="product-container col-10 offset-1">
                 <div class="row mt-1 mb-2">
@@ -97,7 +90,6 @@
                                                 </small>
                                             </div>
                                             {% endif %}
-                                            <!-- <p class="mt-3">{{ product.description }}</p> -->
                                             <div class="cart-btn">                                              
                                                 <a class="btn btn-md btn-success mt-5 font-weight-bold" href="{% url 'add_to_cart' product.id %}">Add to Cart</a>
                                             </div>
@@ -152,13 +144,13 @@
 
 {% block postloadjs %}
     {{ block.super }}
-    <script type="text/javascript">
+    <script>
         $('.btt-link').click(function(e) {
             window.scrollTo(0,0)
         })
     </script>
 
-    <script type="text/javascript">
+    <script>
         $('#sort-selector').change(function() {
             var selector = $(this);
             var currentUrl = new URL(window.location);
