--- a/products/templates/products/user_wish_list.html
+++ b/products/templates/products/user_wish_list.html
@@ -51,7 +51,6 @@
                             {% endif %}
                             <p class="mt-3">{{ product.description }}</p>
                             <a class="btn btn-md py-3 btn-dark text-white view-expand font-weight-bold" type="button" href="{% url 'add_to_wishlist' product.pk %}">Remove from Wishlist</a>
-                            <!-- <a type="button" class="btn btn-primary btn-sm" href="{% url 'add_to_wishlist' product.pk %}">Remove from Wishlist</a> -->
                         </div>
                     </div>
                 </div> <!-- row div ends-->
@@ -78,7 +77,7 @@
 <!-- JAVASCRIPT FOR BACK TO TOP BUTTON -->
 {% block postloadjs %}
     {{ block.super }}
-    <script type="text/javascript">
+    <script>
         $('.btt-link').click(function(e) {
             window.scrollTo(0,0)
         })
