--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -84,13 +84,11 @@
 <!-- JS FOR BACK TO TOP BUTTON -->
 {% block postloadjs %}
     {{ block.super }}
-    <script type="text/javascript">
+    <script>
         $('.btt-link').click(function(e) {
             window.scrollTo(0,0)
         })
     </script>
-
-    <!-- <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script> -->
 {% endblock %}
 
 
