--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -29,7 +29,7 @@
                 <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <button class="btn btn-dark rounded-0 float-right">Update Information</button>
+                    <button class="mb-5 btn btn-dark rounded-0 float-right">Update Information</button>
                 </form>
             </div>
             <div class="col-12 col-lg-6">
@@ -67,7 +67,8 @@
                             </tr>
                             {% endfor %}
                         </tbody>
-                <!-- {{ orders }} -->
+                    </table>
+                </div>
             </div>
         </div>
     </div>  <!-- container div ends -->
